# githubmock

./: BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  graphql.go  graphql_resolver.go  graphql_schema.go  graphql_test.go  resource.go  testing.go  testing_test.go
.build/: test.cue
cmd/: example.yaml  go.mod  go.sum
cmd/githubmock-server/: BUILD.bazel  main.go
cmd/githubmock-server/internal/config/: BUILD.bazel  object.go
