load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix go.f110.dev/githubmock

gazelle(name = "gazelle")

go_library(
    name = "githubmock",
    srcs = ["testing.go"],
    importpath = "go.f110.dev/githubmock",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_google_go_github_v83//github",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@com_github_stretchr_testify//assert",
        "@dev_f110_go_xerrors//:xerrors",
    ],
)

go_test(
    name = "githubmock_test",
    srcs = ["testing_test.go"],
    embed = [":githubmock"],
    deps = [
        "@com_github_google_go_github_v83//github",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
